feat: Change projection static library to dynamic library.

--- a/windows/CppWinRTProjection/CppWinRTProjection.vcxproj.filters
+++ b/windows/CppWinRTProjection/CppWinRTProjection.vcxproj.filters
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <Midl Include="PhotoBook.idl" />
+    <Midl Include="PhotoBookListener.idl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CppWinRTProjection.def" />
