feat: Add error when the included library doesn't exist.

--- a/PB/Config.h.in
+++ b/PB/Config.h.in
@@ -2,7 +2,13 @@
 
 #include <pb/common/Log.h>
 #include <pb/util/Timer.h>
+#if __has_include(<pb/common/@PRINTER_TYPE@.h>)
+
 #include <pb/common/@PRINTER_TYPE@.h>
+
+#else
+#warning "@PRINTER_TYPE@ doesn't exist"
+#endif
 
 namespace PB {
   
