feat: Add Concepts.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -62,6 +62,7 @@ add_library(pblib STATIC
     include/pb/FileComparator.h
     include/pb/PhotoBook.h
     include/pb/Scheduable.h
+    include/pb/util/Concepts.h
     include/pb/util/FileInfo.h
     include/pb/util/Timer.h
     include/pb/util/Thread.h
