--- a/windows/PhotobookUI/PhotobookUI.vcxproj
+++ b/windows/PhotobookUI/PhotobookUI.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="MainWindow.xaml.h">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </ClInclude>
+    <ClInclude Include="PhotoBookListener.h" />
     <ClInclude Include="TableContentPage.xaml.h">
       <DependentUpon>TableContentPage.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -158,6 +159,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </ClCompile>
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
+    <ClCompile Include="PhotoBookListener.cpp" />
     <ClCompile Include="TableContentPage.xaml.cpp">
       <DependentUpon>TableContentPage.xaml</DependentUpon>
       <SubType>Code</SubType>
