feat: Separate CircularIterator.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -49,6 +49,7 @@ find_package(OpenCV CONFIG REQUIRED)
 include_directories(${CMAKE_BINARY_DIR})
 
 add_library(pblib STATIC
+    include/pb/CircularIterator.h
     include/pb/common/Log.h
     include/pb/common/${PRINTER_TYPE}.h
     ${CMAKE_CURRENT_BINARY_DIR}/include/pb/Config.h
