--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -11,6 +11,8 @@ if (WIN32)
     add_compile_options(/std:c++20)
     add_compile_options(/EHsc)
     add_compile_options(/Wall)
+    add_compile_options(/w4626)
+    add_compile_options(/w5027)
 else()
     set(CMAKE_CXX_FLAGS "-std=c++20")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
