dev: Add `WinRTStorage`, `WinRTStorageListener`.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -85,6 +85,7 @@ add_library(pblib STATIC
     include/pb/PhotoBook.h
     include/pb/Scheduable.h
     include/pb/Settings.h
+    include/pb/StorageListener.h
     include/pb/util/Concepts.h
     include/pb/util/FileInfo.h
     include/pb/util/Timer.h
