--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -10,9 +10,9 @@ option(STORAGE_TYPE "The persistence platform." OFF)
 if (WIN32)
     add_compile_options(/std:c++20)
     add_compile_options(/EHsc)
-    add_compile_options(/Wall)
-    add_compile_options(/w4626)
-    add_compile_options(/w5027)
+    add_compile_options(/W4)
+    add_compile_options(/wd4626)
+    add_compile_options(/wd5027)
 else()
     set(CMAKE_CXX_FLAGS "-std=c++20")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
