--- a/PB/Config.h.in
+++ b/PB/Config.h.in
@@ -20,6 +20,8 @@ public:
 
   static constexpr LogLevel logLevel() { return LogLevel::@LOG_LEVEL@; }
 
+  static constexpr const char* persistentFile() { return "persistent.txt"; }
+
   Log const &printer() { return mLogPrinter; }
 
   std::stop_source sStopSource;
