--- a/windows/PhotobookUI/PhotobookUI.vcxproj.filters
+++ b/windows/PhotobookUI/PhotobookUI.vcxproj.filters
@@ -21,6 +21,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Converter.h" />
     <ClInclude Include="PhotoBookListener.h" />
+    <ClInclude Include="WinrtStorage.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Wide310x150Logo.scale-200.png">
