--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ windows/CppProjection/obj/*
 windows/CppProjection/bin/*
 windows/PhotobookUI/bin/*
 osx/PhotoBook/PhotoBook.xcodeproj/project.xcworkspace/xcuserdata/*
+vcpkg/*
