--- a/windows/PhotobookUI/PhotobookUI.vcxproj.filters
+++ b/windows/PhotobookUI/PhotobookUI.vcxproj.filters
@@ -12,19 +12,21 @@
     <Midl Include="App.idl" />
     <Midl Include="MainWindow.idl" />
     <Midl Include="ProjectItem.idl" />
+    <Midl Include="ImageUIData.idl" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
     <ClCompile Include="PhotoBookListener.cpp" />
     <ClCompile Include="ProjectItem.cpp" />
+    <ClCompile Include="ImageUIData.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="Converter.h" />
     <ClInclude Include="PhotoBookListener.h" />
     <ClInclude Include="WinrtStorage.h" />
     <ClInclude Include="ProjectItem.h" />
+    <ClInclude Include="ImageUIData.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Wide310x150Logo.scale-200.png">
