ui: Add `ColorScheme`.

--- a/windows/PhotobookUI/PhotobookUI.vcxproj
+++ b/windows/PhotobookUI/PhotobookUI.vcxproj
@@ -138,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml" />
+    <Page Include="ColorScheme.xaml" />
     <Page Include="FirstPage.xaml">
       <SubType>Designer</SubType>
     </Page>
