--- a/windows/PhotobookUI/PhotobookUI.vcxproj.filters
+++ b/windows/PhotobookUI/PhotobookUI.vcxproj.filters
@@ -7,6 +7,7 @@
     <Page Include="MainWindow.xaml" />
     <Page Include="TableContentPage.xaml" />
     <Page Include="FirstPage.xaml" />
+    <Page Include="ColorScheme.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="App.idl" />
