--- a/windows/PhotobookUI/packages.config
+++ b/windows/PhotobookUI/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Graphics.Win2D" version="1.0.5.1" targetFramework="native" />
-  <package id="Microsoft.Windows.CppWinRT" version="2.0.220929.3" targetFramework="native" />
-  <package id="Microsoft.Windows.ImplementationLibrary" version="1.0.220914.1" targetFramework="native" />
-  <package id="Microsoft.Windows.SDK.BuildTools" version="10.0.22621.755" targetFramework="native" />
-  <package id="Microsoft.WindowsAppSDK" version="1.3.230602002" targetFramework="native" />
+  <package id="CommunityToolkit.WinUI.UI.Controls" version="7.1.2" targetFramework="native" />
+  <package id="Microsoft.Graphics.Win2D" version="1.1.0" targetFramework="native" />
+  <package id="Microsoft.Windows.CppWinRT" version="2.0.230706.1" targetFramework="native" />
+  <package id="Microsoft.Windows.ImplementationLibrary" version="1.0.230824.2" targetFramework="native" />
+  <package id="Microsoft.Windows.SDK.BuildTools" version="10.0.22621.756" targetFramework="native" />
+  <package id="Microsoft.WindowsAppSDK" version="1.4.230913002" targetFramework="native" />
 </packages>
