ui: Add coffe-cup asset.

--- a/windows/PhotobookUI/PhotobookUI.vcxproj.filters
+++ b/windows/PhotobookUI/PhotobookUI.vcxproj.filters
@@ -60,6 +60,9 @@
     <Image Include="Assets\page-right-enabled.png">
       <Filter>Assets</Filter>
     </Image>
+    <Image Include="Assets\coffee-cup.png">
+      <Filter>Assets</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
