--- a/windows/PhotobookUI/PhotobookUI.vcxproj
+++ b/windows/PhotobookUI/PhotobookUI.vcxproj
@@ -196,6 +196,7 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Assets\coffee-cup.png" />
     <Image Include="Assets\folderIcon.png" />
     <Image Include="Assets\LockScreenLogo.scale-200.png" />
     <Image Include="Assets\page-left-enabled.png">
