--- a/windows/PhotobookUI/PhotobookUI.vcxproj
+++ b/windows/PhotobookUI/PhotobookUI.vcxproj
@@ -129,6 +129,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </ClInclude>
     <ClInclude Include="PhotoBookListener.h" />
+    <ClInclude Include="PopUps.h" />
     <ClInclude Include="ProjectItem.h" />
     <ClInclude Include="TableContentPage.xaml.h">
       <DependentUpon>TableContentPage.xaml</DependentUpon>
@@ -164,6 +165,7 @@
     </ClCompile>
     <ClCompile Include="$(GeneratedFilesDir)module.g.cpp" />
     <ClCompile Include="PhotoBookListener.cpp" />
+    <ClCompile Include="PopUps.cpp" />
     <ClCompile Include="ProjectItem.cpp" />
     <ClCompile Include="TableContentPage.xaml.cpp">
       <DependentUpon>TableContentPage.xaml</DependentUpon>
