dev: Rename `UnstagedImagesLogic` to `ThumbnailsProcessor`.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -79,7 +79,7 @@ add_library(pblib STATIC
     include/pb/persistence/Persistence.h
     include/pb/PhotoBook.h
     include/pb/Project.h
-    include/pb/UnstagedImagesLogic.h
+    include/pb/ThumbnailsProcessor.h
     include/pb/StagedImagesLogic.h
     include/pb/util/Concepts.h
     include/pb/util/FileInfo.h
@@ -100,7 +100,7 @@ add_library(pblib STATIC
     src/Pdf.cpp
     src/PhotoBook.cpp
     src/Project.cpp
-    src/UnstagedImagesLogic.cpp
+    src/ThumbnailsProcessor.cpp
     src/StagedImagesLogic.cpp
     src/util/FileInfo.cpp
     src/util/Timer.cpp
