--- a/PB/Config.h.in
+++ b/PB/Config.h.in
@@ -30,6 +30,11 @@ public:
   static constexpr int MEDIUM_THUMBNAIL_WIDTH = 800;
   static constexpr int MEDIUM_THUMBNAIL_HEIGHT = 530;
 
+
+  // The bounding box where the paper size will fit
+  static constexpr int CANVAS_MIN_MAX_WIDTH = 438;
+  static constexpr int CANVAS_MIN_MAX_HEIGHT = 310;
+
   static constexpr const char *SMALL_THUMBNAIL_NAME = "thumbnail-small";
   static constexpr const char *MEDIUM_THUMBNAIL_NAME = "thumbnail-medium";
   static constexpr unsigned    THUMBNAIL_THREADPOOL_THREAD_COUNT = 4;
