--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -41,7 +41,7 @@ jobs:
         doNotCache: false
 
     - name: Build pblib
-      run: cmake -B PB\build -S PB -DCMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake -DLOG_LEVEL=Debug -DPRINTER_TYPE=OutputConsolePrinter
+      run: cmake -B PB\build -S PB -DCMAKE_TOOLCHAIN_FILE="vcpkg\scripts\buildsystems\vcpkg.cmake" -DLOG_LEVEL=Debug -DPRINTER_TYPE=OutputConsolePrinter
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.0.2
