--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -45,12 +45,12 @@ jobs:
         vcpkgJsonGlob: '**\windows\vcpkg.json'
 
     - name: vcpkg integrate install
-      run: vcpkg\vcpkg.exe integrate install
+      run: windows\vcpkg\vcpkg.exe integrate install
     - name: Command to list contents
-      run: dir vcpkg\scripts\buildsystems
+      run: dir windows\vcpkg\scripts\buildsystems
 
     - name: Command to list vcpkg packages
-      run: vcpkg\vcpkg.exe list
+      run: windows\vcpkg\vcpkg.exe list
 
     - name: Run CMake consuming CMakePreset.json and run vcpkg to build dependencies
       uses: lukka/run-cmake@v10
@@ -63,7 +63,7 @@ jobs:
         # This is the name of the CMakePresets.json's configuration to use to generate
         # the project files. This configuration leverages the vcpkg.cmake toolchain file to
         # run vcpkg and install all dependencies specified in vcpkg.json.
-        configurePreset: 'pblib-release'
+        configurePreset: 'actions-pblib-release'
 
 
     - name: Add MSBuild to PATH
