--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -7,9 +7,9 @@ name: MSBuild
 
 on:
   push:
-    branches: [ "main", "actions" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "actions" ]
+    branches: [ "main" ]
 
 env:
   # Path to the solution file relative to the root of the project.
