--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -76,3 +76,7 @@ jobs:
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} /property:Platform=x64 ${{env.SOLUTION_FILE_PATH}}
+
+    - name: Tests
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: PB\build\Release\pbtests.exe
